# Duplicate-finder

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp
src/core/: Config.cpp  Config.h  DuplicateFinder.cpp  DuplicateFinder.h  FileEntry.cpp  FileEntry.h  FileOperator.cpp  FileOperator.h  Hasher.cpp  Hasher.h  Logger.cpp  Logger.h  ScanWorker.cpp  ScanWorker.h  Scanner.cpp  Scanner.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/WizardPages/: PageActions.cpp  PageActions.h  PageResults.cpp  PageResults.h  PageScan.cpp  PageScan.h  PageSelectFolders.cpp  PageSelectFolders.h
